Sat Jan  4 19:13:34 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/socket.c (rsock_syserr_fail_host_port): add errno
	  argument version anduse rb_syserr_fail_str() instead of
	  rb_sys_fail_str() with restoring errno.

	* ext/socket/socket.c (rsock_syserr_fail_path): ditto, and
	  rb_syserr_fail().

	* ext/socket/socket.c (rsock_sys_fail_sockaddr): ditto, use
	  rsock_syserr_fail_raddrinfo().

	* ext/socket/socket.c (rsock_sys_fail_raddrinfo): ditto.

	* ext/socket/socket.c (setup_domain_and_type): ditto.

Sat Jan  4 17:18:58 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm.c (RubyVM::OPTS): get rid of a garbage character.

Sat Jan  4 10:17:54 2014  Eric Hodel  <drbrain@segment7.net>

	* lib/rinda/ring.rb (Rinda::RingFinger#make_socket):  Use
	  ipv4_multicast_ttl option for portability.

Sat Jan  4 10:15:47 2014  Eric Hodel  <drbrain@segment7.net>

	* lib/rinda/ring.rb (Rinda::RingFinger#make_socket):  Use
	  ipv4_multicast_loop option for portability.  Patch by Jeremy Evans.
	  [ruby-trunk - Bug #9351]

Fri Jan  3 19:09:00 2014  Eric Wong  <normalperson@yhbt.net>

	* ext/socket/socket.c (rsock_sys_fail_host_port): save and restore errno
	  before calling rb_sys_fail_str to prevent [BUG] errno == 0.
	  Patch by Eric Wong. [ruby-core:59498] [Bug #9352]

	* ext/socket/socket.c (rsock_sys_fail_path): ditto
	* ext/socket/socket.c (rsock_sys_fail_sockaddr): ditto
	* ext/socket/socket.c (rsock_sys_fail_raddrinfo): ditto
	* ext/socket/socket.c (rsock_sys_fail_raddrinfo_or_sockaddr): ditto

Fri Jan  3 10:43:57 2014  Aman Gupta <ruby@tmm1.net>

	* test/net/imap/cacert.pem: generate new CA cert, since the last one
	  expired. [Bug #9341] [ruby-core:59459]
	* test/net/imap/server.crt: new server cert signed with updated CA.
	* test/net/imap/Makefile: add `make regen_certs` to automate this
	  process.

Fri Jan  3 00:09:54 2014  Benoit Daloze  <eregontp@gmail.com>

	* ext/bigdecimal: update class method call style from :: to .
	  in documentation and usage.
